# lit

./: .env.example  .gitignore  LICENSE  Makefile  README.md  git.js  index.js  lingo.js  package-lock.json  package.json  pyproject.toml  requirements.txt
ai_md/: ARCHITECTURE.md  BUILD_SUMMARY.md  COMPLETION_CHECKLIST.md  DEPLOYMENT.md  IMPLEMENTATION_GUIDE.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md
lit/: __init__.py  __main__.py  cli.py  commit_flow.py  git_utils.py  lingo_utils.py
tests/: test_lit.py
